--- a/dicoding/membuat-front-end-web-pemula/bookshelf-apps/assets/css/style.css
+++ b/dicoding/membuat-front-end-web-pemula/bookshelf-apps/assets/css/style.css
@@ -6,7 +6,32 @@
   --debug-color2: rgb(253, 210, 131);
 }
 
-.flex {
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: var(--bg-color);
+  margin: 0;
   display: flex;
-  
+  flex-flow: column nowrap;
+}
+
+.card {
+  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+
+  padding: 1.3rem;
+}
+
+.flex-column {
+  display: flex;
+  flex-flow: column nowrap;
 }
