adding js bookshelf

--- a/dicoding/membuat-front-end-web-pemula/bookshelf-apps/assets/css/style.css
+++ b/dicoding/membuat-front-end-web-pemula/bookshelf-apps/assets/css/style.css
@@ -12,7 +12,11 @@
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4,
+p {
   margin: 0;
 }
 
@@ -56,7 +60,7 @@ main {
 header {
   padding-block: 1.2rem 1.3rem;
   /* padding-block: 0.2rem 0.3rem; */
-  padding-inline: 1.3rem;
+  padding-inline: 2.5rem;
   display: flex;
   /* margin-inline: auto; */
   justify-content: space-between;
@@ -72,7 +76,11 @@ header {
 .input_section {
   display: flex;
   flex-direction: column;
-  padding: 16px;
+  padding: 1.2rem 2rem 1.5rem 2rem;
+}
+
+.input_section:hover {
+  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.5);
 }
 
 .input_section > h2 {
@@ -88,12 +96,21 @@ header {
 .input_section > form > button {
   background-color: var(--text-color);
   color: var(--bg-color);
-  /* border: 0; */
   border-radius: 5px;
-  /* display: block; */
   width: 100%;
   padding: 8px;
   cursor: pointer;
+
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+}
+
+.input_section > form > button:hover {
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 .input_section > form > button > span {
@@ -129,6 +146,10 @@ header {
   display: flex;
   flex-flow: column nowrap;
   gap: 1rem;
+}
+
+.book_shelf_container:hover {
+  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.5);
 }
 
 .book_shelf_container_head {
@@ -187,11 +208,28 @@ header {
   -o-border-radius: 5px;
 }
 
+#searchSubmit {
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+}
+
+#searchSubmit:hover {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
+.book_item:hover {
+  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.5);
+}
+
 .book_shelf span {
   font-weight: normal;
 }
 
-.book_shelf h2 {
+.book_shelf h3 {
   padding-bottom: 1rem;
 }
 
@@ -214,13 +252,28 @@ header {
 
 .action {
   align-self: flex-start;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 0.3rem;
+  padding-top: 0.8rem;
 }
 
 .action button {
   cursor: pointer;
+  padding-block: 0.1rem;
 }
 
 /* ^footer */
 footer {
   padding: 1rem;
+}
+
+.book_shelf > .book_list > .book_item > .action > .green {
+  background-color: darkgreen;
+  color: white;
+}
+
+.book_shelf > .book_list > .book_item > .action > .red {
+  background-color: darkred;
+  color: white;
 }
