--- a/dicoding/membuat-front-end-web-pemula/bookshelf-apps/assets/css/style.css
+++ b/dicoding/membuat-front-end-web-pemula/bookshelf-apps/assets/css/style.css
@@ -243,11 +243,18 @@ header {
 
 .book_item {
   /* flex: 1; */
-  width: 32%;
+  width: 13em;
   height: auto;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+}
+
+.book_data {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* Akan menempatkan semua konten di bagian bawah */
+  flex-grow: 1; /* Akan memastikan bahwa .book_data memenuhi ruang yang tersedia */
 }
 
 .action {
@@ -276,4 +283,58 @@ footer {
 .book_shelf > .book_list > .book_item > .action > .red {
   background-color: darkred;
   color: white;
+}
+
+@media screen and (max-width: 480px) {
+  .book_item {
+    width: 100%;
+  }
+
+  #searchBook > input {
+    width: 3em;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .book_list {
+    justify-content: center;
+  }
+
+  .book_item {
+    width: 19em;
+  }
+
+  #searchBook > input {
+    width: 7em;
+  }
+
+  header {
+    padding-block: 1.2rem 1.3rem;
+    padding-inline: 1rem;
+  }
+
+  .head_bar img {
+    width: 100%;
+    max-width: 10em;
+  }
+
+  .head_bar h1 {
+    font-size: 1.1em;
+  }
+
+  .input_section label  {
+    font-size: 0.9em;
+  }
+  
+  h2 {
+    font-size: 1.3em;
+  }
+
+  h3 {
+    font-size: 1em;
+  }
+
+  #searchBook label {
+    font-size: 0.9em;
+  }
 }
